--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -189,7 +189,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
@@ -276,5 +276,65 @@
   100% {
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+////////////////////////////////
+/// Paragraph
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+////////////////////////////////
+/// List
+.list {
+  list-style: none;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  margin: 3rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  &__item {
+    flex: 50%;
+    margin-bottom: 0.7rem;
+  }
+  &__item:before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    ///older browsers
+    // background-size: cover;
+    // background-image: url(../../../public/chevron-thin-right.svg);
+
+    // New brosers - masks
+    background-color: var(--color-primary);
+    mask-image: url(../../../public/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+/// ////////////////////////////////
+/// recommend
+
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+
+  &__count {
+    margin-right: auto;
+  }
+  &__friends {
+  }
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid white;
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
   }
 }
