--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -254,8 +254,16 @@
   background-color: transparent;
   cursor: pointer;
   transition: all 0.2s;
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
+
   &:hover {
     color: var(--color-grey-dark-1);
+    span {
+      margin-left: 8px;
+    }
   }
 
   &:focus {
