--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -34,3 +34,9 @@ Grey dark 3: #999
 
   --line: 1px solid var(--color-grey-light-2);
 }
+
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em;
+$bp-medium: 56.25em;
+$bp-small: 37.5em;
+$bp-smallest: 31.25em;
