--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,6 +9,9 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%; // 10pixels (10px /16px )
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
